Update branding in footer to jadu wordmark only

--- a/stylesheets/_config.branding.scss
+++ b/stylesheets/_config.branding.scss
@@ -19,10 +19,9 @@ $branding-navigation-fallback:        $image-path + 'branding/logo-cms-white.png
 $branding-navigation-height:          100px !default;
 $branding-navigation-width:           72px !default;
 
-$branding-footer:                     $image-path + 'branding/jadu-continuum-brandmark.svg' !default;
-$branding-footer-fallback:            $image-path + 'branding/jadu-continuum-brandmark.png' !default;
+$branding-footer:                     $image-path + 'branding/jadu-wordmark.svg' !default;
 $branding-footer-height:              16px !default;
-$branding-footer-width:               127px !default;
+$branding-footer-width:               33px !default;
 
 $branding-brandmark:                  $image-path + 'branding/continuum-brandmark.svg' !default;
 $branding-brandmark-fallback:         $image-path + 'branding/continuum-brandmark.png' !default;
