Increase contrast of base panel background

--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -1,5 +1,5 @@
 .panel {
-    background-color: color(gray, lightest);
+    background-color: color(gray, lighter);
     border-radius: $border-radius;
     margin: $line-height-base 0;
     position: relative;
