--- a/views/lexicon/tabs/buttons_labels.html.twig
+++ b/views/lexicon/tabs/buttons_labels.html.twig
@@ -385,21 +385,25 @@
             html.button_group({
                 buttons: [
                     html.button({
+                        class: 'btn--outline',
                         label: html.icon('align-left', {
                             'label': 'Align left'
                         })
                     }),
                     html.button({
+                        class: 'btn--outline',
                         label: html.icon('align-center', {
                             'label': 'Align center'
                         })
                     }),
                     html.button({
+                        class: 'btn--outline',
                         label: html.icon('align-right', {
                             'label': 'Align right'
                         })
                     }),
                     html.button({
+                        class: 'btn--outline',
                         label: html.icon('align-justify', {
                             'label': 'Align justify'
                         })
