--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -217,7 +217,7 @@
 }
 
 .nav-divider {
-    border-color: darken($nav-color-dark, 6);
+    border-color: rgba(255, 255, 255, .2);
     margin: 5px 0;
 }
 
