--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -38,6 +38,7 @@ $fa-css-prefix: 'icon';
 @import 'mixin.css-arrow';
 @import 'mixin.hide-text';
 @import 'mixin.inline-block';
+@import 'mixin.label-variant';
 @import 'mixin.media-queries';
 @import 'mixin.mixins-to-organise';
 @import 'mixin.responsive-utilities';
