Make sure icons in links are always black

--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -17,6 +17,10 @@
         }
     }
 
+    a > .icon {
+        color: color(black);
+    }
+
     // [href],
     // .continuum-cms & [href]:link {
     //     border-bottom: 1px dotted color(grey, light);
