Remove !important from disabled links

--- a/stylesheets/_structure.scaffolding.scss
+++ b/stylesheets/_structure.scaffolding.scss
@@ -54,7 +54,7 @@ a {
 
   &.is-disabled,
   &.disabled {
-    color: color(link, disabled) !important;
+    color: color(link, disabled);
     cursor: not-allowed;
   }
 }
