--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/nav/breadcrumb-items.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/nav/breadcrumb-items.html.twig
@@ -2,9 +2,9 @@
 {% block body %}
 {%
     set breadcrumbs = [
-        {'label': 'foo', 'href': '#foo'},
+        {'label': 'foo'},
         {'label': 'bar', 'href': '#bar'},
-        {'label': 'baz', 'href': '#baz'}
+        {'label': 'baz'}
     ]
 %}
 {{ nav.breadcrumbs(breadcrumbs) }}
