--- a/views/lexicon/tables/basic.html.twig
+++ b/views/lexicon/tables/basic.html.twig
@@ -33,7 +33,7 @@
                 <td>4 GB</td>
                 <td class="centered">2</td>
                 <td>
-                    {{ html.link({ 'label': 'Reboot', 'class': 'table-action' }) }}<!--
+                    {{ html.link({ 'label': html.icon('ok') ~ ' Reboot', 'class': 'table-action' }) }}<!--
                     -->{{ html.link({ 'label': 'Suspend', 'class': 'table-action' }) }}<!--
                     -->{{ html.link({ 'label': 'Shutdown', 'class': 'table-action' }) }}<!--
                     -->{{ html.link({ 'label': 'Console', 'class': 'table-action' }) }}
