Remove bottom margin from new breadcrumb ol

--- a/stylesheets/_component.breadcrumb.scss
+++ b/stylesheets/_component.breadcrumb.scss
@@ -4,6 +4,10 @@
     margin: 0 0 ($line-height-base / 2);
     width: 100%;
 
+    ol {
+        margin: 0;
+    }
+
     li {
         display: inline;
         list-style-type: none;
