--- a/stylesheets/_component.progress-bars.scss
+++ b/stylesheets/_component.progress-bars.scss
@@ -2,7 +2,7 @@
 .progress {
     background-color: $progress-bg;
     border-radius: $border-radius;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
+    box-shadow: inset 0 3px 0 0 rgba(0, 0, 0, 0.1);
     height: $line-height-computed;
     margin-bottom: $line-height-computed;
     overflow: hidden;
@@ -11,7 +11,6 @@
 // Bar of progress
 .progress-bar {
     background-color: color(primary);
-    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
     color: color(white);
     float: left;
     font-size: $font-size-small;
