--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -241,6 +241,22 @@
         position: fixed;
     }
 
+    &::before {
+        background-image: radial-gradient(ellipse, #1c61d7 0, #1c61d7 30%, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0) 100%);
+        bottom: -240px;
+        content: '';
+        display: block;
+        height: 500px;
+        position: absolute;
+        left: 10px;
+        transform: rotate(315deg);
+        width: 300px;
+    }
+
+    .is-open &::before {
+        background-image: none;
+    }
+
     .is-active {
         background-color: rgba(255, 255, 255, .2);
     }
@@ -329,7 +345,7 @@
 .nav-quaternary {
     background-attachment: scroll;
     background-color: $nav-color-dark;
-    background-image: $background-gradient;
+    background-image: linear-gradient(150deg, #2c3044 0, #2c3044 10%, #2d366f 40%, #2d366f 75%);
     box-shadow: $shadow-large 0 0 color(background, shadow);
     left: $nav-primary-width;
     margin-left: -320px;
@@ -352,6 +368,18 @@
     // cope with presence of scrollbars in IE
     @include ie-lte(10) {
         width: 280px;
+    }
+
+    &::before {
+        background-image: radial-gradient(ellipse, #1c61d7 0, #1c61d7 10%, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0) 100%);
+        bottom: -240px;
+        content: '';
+        display: block;
+        height: 500px;
+        position: absolute;
+        left: 100px;
+        transform: rotate(90deg);
+        width: 300px;
     }
 
     .nav-container {
@@ -442,8 +470,6 @@
 }
 
 .jadu-branding {
-    background-color: rgba(0, 0, 0, .3);
-    border-bottom: 3px solid color(white);
     display: block;
     padding: 0;
     text-decoration: none;
