Tweak content background

--- a/stylesheets/_layout.tabs.scss
+++ b/stylesheets/_layout.tabs.scss
@@ -1,5 +1,5 @@
 .content-main {
-    background-color: #ebe7ee;
+    background-color: #3e499426;
     display: table;
     min-height: 100%;
     padding: 0 $gutter-width;
