Switch content main to rgba

--- a/stylesheets/_layout.tabs.scss
+++ b/stylesheets/_layout.tabs.scss
@@ -1,5 +1,5 @@
 .content-main {
-    background-color: #3e499426;
+    background-color: rgba(62, 73, 148, .3);
     display: table;
     min-height: 100%;
     padding: 0 $gutter-width;
