Use black links in tab sidebar

--- a/stylesheets/_layout.tabs.scss
+++ b/stylesheets/_layout.tabs.scss
@@ -228,6 +228,10 @@
             margin: 0 0 $margin-large-vertical;
         }
 
+        a {
+            color: color(text);
+        }
+
         .no-js & {
           display: table-cell;
         }
