Layout tweaks for branding

--- a/stylesheets/_layout.tabs.scss
+++ b/stylesheets/_layout.tabs.scss
@@ -1,5 +1,5 @@
 .content-main {
-    background-color: rgba(62, 73, 148, .2);
+    background-color: color(backdrop);
     display: table;
     min-height: 100%;
     padding: 0 $gutter-width;
