Switch flash messages to prodima regular

--- a/stylesheets/_component.flash.scss
+++ b/stylesheets/_component.flash.scss
@@ -28,6 +28,7 @@
 .flash h2 {
     display: inline;
     font-size: $font-size-base;
+    font-family: $font-family-regular;
 }
 
 // Make sure sticky flashes appear over the breadcrumb
