--- a/stylesheets/_component.greeter.scss
+++ b/stylesheets/_component.greeter.scss
@@ -120,6 +120,21 @@ $greeter-brand-bottom-height:           40px !default;
     &__header {
         position: relative;
         margin-top: 20%;
+
+        li {
+            margin-top: $margin-base-vertical;
+        }
+
+        strong {
+            border: 2px solid color(white);
+            border-radius: 20px;
+            display: inline-block;
+            height: 25px;
+            line-height: 23px;
+            min-width: 25px;
+            text-align: center;
+            padding: 0 5px;
+        }
     }
 
     &__link {
