--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -463,7 +463,7 @@
         }
 
         .jadu-wordmark {
-            filter: invert(0);
+            filter: invert(100);
         }
     }
 }
@@ -576,8 +576,9 @@
     background: url($branding-wordmark);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: contain;
     display: block;
-    filter: invert(100);
+    filter: invert(0);
     height: $branding-wordmark-height;
     text-indent: -999px;
 }
