Trying to figure out why GH phunit is always displaying buttons on carets

--- a/views/pulsar/v2/helpers/util.html.twig
+++ b/views/pulsar/v2/helpers/util.html.twig
@@ -9,7 +9,7 @@
 
 {% macro caret(visible) %}
 {% spaceless %}
-    {% if visible is defined and visible != 0 %}
+    {% if visible is defined and visible != 0 and visible != null %}
         &nbsp;<span class="caret"></span>
     {% endif  %}
 {% endspaceless %}
